Styles(JSX) Added styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
 @import-normalize; /* bring in normalize.css styles */
+
+body {
+  background: linear-gradient(to bottom, #1c2748, #5d5959);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+  margin: 0;
+  overflow: hidden;
+
+  color: white;
+}
